Fix footer overlap

--- a/site.css
+++ b/site.css
@@ -3,6 +3,7 @@ body {
     font-size: 1.2em;
     line-height: 1.5;
     margin: 0;
+    padding-bottom: 5em;
     background-color: #fff;
     color: #333;
     -webkit-font-smoothing: antialiased;
